--- a/css/style.css
+++ b/css/style.css
@@ -138,7 +138,7 @@ body{
 }
 
 .header .logo i{
-    padding: 1rem;
+    padding: 0.5rem;
 }
 
 .header .fa-bars{
@@ -384,6 +384,7 @@ body{
     margin-bottom: 60px;
     background-size: 200%;
     background-position: left;
+    
   }
   .section-head-1 p{
     color:#333;
@@ -1101,7 +1102,7 @@ body{
 
     .header .logo img{
         width: 20%;
-        height: 4rem;
+        height: 3rem;
         top: 0;
         left: 0;
         background-size: cover;
@@ -1125,7 +1126,7 @@ body{
         width: 100%;
         background-color: white;
         z-index: 1000;
-        border-top: .1rem solid rgba(0, 255, 76, 0.842);
+        border-top: .1rem solid rgba(0,0,0,.3);
     }
 
     .header .navbar ul{
