logo size change in mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -1102,7 +1102,7 @@ body{
 
     .header .logo img{
         width: 20%;
-        height: 3rem;
+        height: 4rem;
         top: 0;
         left: 0;
         background-size: cover;
@@ -1154,12 +1154,26 @@ body{
 
     .home h1{
         color: #fff;
-        font-size: 4rem;
+        font-family: 'Helvetica Neue', Arial, sans-serif;
+        font-size: 6rem;
+        font-weight: bolder;
+        -webkit-text-stroke-width: 1px; /* width of the stroke */
+        -webkit-text-stroke-color: black; /* color of the stroke */
+        text-shadow:
+            -1px 1px 30px rgb(0, 0, 0), /* White glow */
+            1px -1px 40px rgb(0, 0, 0); /* Larger white glow */
     }
     
     .home h2{
         color: #fff;
-        font-size: 2rem;
+        font-size: 4rem;
+        font-weight: bolder;
+        font-family: 'Helvetica Neue', Arial, sans-serif;
+        -webkit-text-stroke-width: 1px; /* width of the stroke */
+        -webkit-text-stroke-color: black; /* color of the stroke */
+        text-shadow:
+            -1px 1px 30px rgb(0, 0, 0), /* White glow */
+            1px -1px 40px rgb(0, 0, 0); /* Larger white glow */ 
     }
 
     .about{
